--- a/main.css
+++ b/main.css
@@ -14,3 +14,21 @@
   --personal-glow: 0px 0px 4px rgba(234, 64, 164, 0.75);
 }
 /* End of Variables*/
+
+/* Resets */
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "montserrat", sans-serif;
+}
+
+input:not([type="radio"]):not([type="checkbox"]),
+button {
+  appearance: none;
+  border: none;
+  outline: none;
+  background: none;
+  cursor: initial;
+}
+/* End of Resets */
