--- a/main.css
+++ b/main.css
@@ -159,3 +159,37 @@ input[type="checkbox"] {
   display: none;
 }
 /* End of Input [Type="radio" & "checkbox"] Styling */
+
+/* Bubble Styling */
+.bubble {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+  border: 2px solid var(--business);
+  box-shadow: var(--business-glow);
+}
+/* End of Bubble Styling */
+
+/* Bubble Personal Styling */
+.bubble.personal {
+  border-color: var(--personal);
+  box-shadow: var(--personal-glow);
+}
+/* End of Bubble Personal Styling */
+
+/* Bubble ::After Styling */
+.bubble::after {
+  content: "";
+  display: block;
+  opacity: 0;
+  width: 0px;
+  height: 0px;
+  background-color: var(--business);
+  box-shadow: var(--business-glow);
+  border-radius: 50%;
+  transition: 0.2s ease-in-out;
+}
+/* End of Bubble ::After Styling */
