--- a/main.css
+++ b/main.css
@@ -294,3 +294,29 @@ input:checked ~ .bubble::after {
   transition: 0.2s ease-in-out;
 }
 /* End of Todo Item Actions Buttun Styling */
+
+/* Todo Item Actions Buttun: Hover Styling */
+.todo-item .actions button:hover {
+  opacity: 0.75;
+}
+/* End of Todo Item Actions Buttun: Hover Styling */
+
+/* Todo Item Actions Edit Styling */
+.todo-item .actions .edit {
+  margin-right: 0.5rem;
+  background-color: var(--primary);
+}
+/* End of Todo Item Actions Edit Styling */
+
+/* Todo Item Actions Delete Styling */
+.todo-item .actions .delete {
+  background-color: var(--danger);
+}
+/* End of Todo Item Actions Delete Styling */
+
+/* Todo Item Done Todo Content Styling */
+.todo-item.done .todo-content input {
+  text-decoration: line-through;
+  color: var(--grey);
+}
+/* End of Todo Item Done Todo Content Styling */
