--- a/main.css
+++ b/main.css
@@ -338,4 +338,26 @@ input:checked ~ .bubble::after {
   text-decoration: line-through;
   color: var(--grey);
 }
+
+/* Last two buttons */
+.btns {
+  margin-left: 40%;
+  margin-bottom: 10%;
+}
+.btns button{
+  background-color: #04AA6D;
+  border: 2px transparent;
+  color: #fff;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  border-radius: 20px;
+}
+.btns button:hover{
+  background-color: transparent;
+  border: 2px solid #04AA6D;
+  color: #04AA6D;
+}
 /* End of Todo Item Done Todo Content Styling */
